# rust-split-modules

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
scripts/: bench-real-crates.sh
skills/cargo-split-modules/: SKILL.md
src/: apply.rs  classify.rs  lib.rs  main.rs  model.rs  pathfix.rs  plan.rs  project.rs  util.rs  verify.rs
tests/: integration.rs
