[package]
name = "cargo-split-modules"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Pawel Jankiewicz <p.jankiewicz@gmail.com>"]
description = "Split large Rust source files into one-item-per-file modules, preserving comments and the public API (verified by the compiler)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/zenide/rust-split-modules"
homepage = "https://github.com/zenide/rust-split-modules"
documentation = "https://docs.rs/cargo-split-modules"
readme = "README.md"
keywords = ["cargo", "refactor", "module", "split", "codegen"]
categories = ["development-tools", "development-tools::cargo-plugins", "command-line-utilities"]
exclude = ["/tests/fixtures/**/target", "/.github", "/img", "/scripts"]

[[bin]]
name = "cargo-split-modules"
path = "src/main.rs"

[lib]
name = "split_modules"
path = "src/lib.rs"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "parsing", "printing", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
